tests/baselines/reference/augmentedTypesModules3b.errors.txt
augmentedTypesModules3b.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules3b.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules3b.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules3b.ts(10,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules3b.ts(14,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
augmentedTypesModules3b.ts(17,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== augmentedTypesModules3b.ts (6 errors) ====
    class m3b { foo() { } }
    module m3b { var y = 2; }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    class m3c { foo() { } }
    module m3c { export var y = 2; } 
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    declare class m3d { foo(): void }
    module m3d { export var y = 2; } 
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    module m3e { export var y = 2; } 
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    declare class m3e { foo(): void } 
    
    declare class m3f { foo(): void }
    module m3f { export interface I { foo(): void } }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    declare class m3g { foo(): void }
    module m3g { export class C { foo() { } } }
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    